[Step2] GET으로 회원가입 기능 구현
* feat: 회원가입 기능 구현

* feat: Url Encoded 형식 디코딩

* feat: ioc container 추가

* feat: Container로 요청 핸들링

* feat: UserController 로 회원가입 처리

* test: HttpUtil TC 작성

* setting: jacoco 설정

* refactor: 네이밍 Controller -> Servlet으로 변경

* refactor: 컨벤션 및 패키지 구조 변경

* feat: Lock을 이용한 회원가입 동시성 처리

* docs: Github Wiki 주소 변경

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,16 @@
 plugins {
     id 'java'
     id 'idea'
+    id 'jacoco'
 }
+
+test {
+    finalizedBy jacocoTestReport // 테스트 종료후 항상 리포트 생성
+}
+jacocoTestReport {
+    dependsOn test // 리포트 생성을 위해서는 test가 먼저 완료되어야 함
+}
+
 
 group 'codesquad'
 version '1.0-SNAPSHOT'
@@ -17,6 +26,9 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'com.github.jknack:handlebars:4.2.0'
+
+    implementation 'org.reflections:reflections:0.9.11'
+
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
