--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.assertj:assertj-core:3.16.1'
+
     testImplementation 'io.rest-assured:rest-assured:5.3.1'
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
 }
 
 test {
